changes in MG, P begonnen

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -409,15 +409,17 @@ The two examples in which the nominative and the dative compete are highlighted 
 
 I end with the competition between the dative and the accusative. Following the case scale, the relative pronoun appears in the dative case and never in accusative. As Old High German allows the internal and the external case to surface, the dative surfaces when it is the internal case and when it is the external case.
 
-Consider the example in \ref{ex:ohg-acc-dat}. In this example, the internal dative case competes against the external accusative case.
-The internal case is dative, as the predicate \tit{zawen} `to tell' takes dative subjects.
-The external case is accusative, as the predicate \tit{weizan} `to know' takes accusative objects.
-The relative pronoun \tit{thémo} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{dat}' appears in the external case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
-Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in the accusative case are unattested.
+% not found:
 
-\exg. weiz \tbf{thémo} \tbf{ouh} \tbf{baz} \tbf{záweta}\\
-know.1\ac{sg}\scsub{[acc]} \tsc{rp}.\ac{sg}.\ac{m}.\ac{dat} also better manage.\ac{pst}.3\ac{sg}\scsub{[dat]}\\
-`I know the one who also managed it better' \flushfill{Old High German, \ac{otfrid} V 5:5}\label{ex:ohg-acc-dat}
+% Consider the example in \ref{ex:ohg-acc-dat}. In this example, the internal dative case competes against the external accusative case.
+% The internal case is dative, as the predicate \tit{zawen} `to tell' takes dative subjects.
+% The external case is accusative, as the predicate \tit{weizan} `to know' takes accusative objects.
+% The relative pronoun \tit{thémo} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{dat}' appears in the external case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
+% Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in the accusative case are unattested.
+%
+% \exg. weiz \tbf{thémo} \tbf{ouh} \tbf{baz} \tbf{záweta}\\
+% know.1\ac{sg}\scsub{[acc]} \tsc{rp}.\ac{sg}.\ac{m}.\ac{dat} also better manage.\ac{pst}.3\ac{sg}\scsub{[dat]}\\
+% `I know the one who also managed it better' \flushfill{Old High German, \ac{otfrid} V 5:5}\label{ex:ohg-acc-dat}
 
 %sunta	ni	furliez	themo	ih	mit	rehtu	scolta (ext:dat, int:nom)
 
