--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -100,7 +100,7 @@ In Chapter \ref{ch:typology}, I showed that Modern German is a language of the i
       \begin{forest} boom
         [\tsc{k}P,
         tikz={
-        \node[label=below:\tit{n/m},
+        \node[label=below:\tit{r/n/m},
         draw,circle,
         scale=0.75,
         fit to=tree]{};
@@ -125,7 +125,7 @@ In Chapter \ref{ch:typology}, I showed that Modern German is a language of the i
             ]
             [\tsc{k}P,
             tikz={
-            \node[label=below:\tit{n/m},
+            \node[label=below:\tit{r/n/m},
             draw,circle,
             scale=0.75,
             fit to=tree]{};
@@ -173,7 +173,7 @@ In the introduction of this chapter, I suggested that the internal syntax of rel
       ]
       [\tsc{k}P,
       tikz={
-      \node[label=below:\tit{n/m},
+      \node[label=below:\tit{r/n/m},
       draw,circle,
       scale=0.75,
       fit to=tree]{};
@@ -218,7 +218,7 @@ When the relative pronoun is the dative, the \tsc{k}P consists of the features \
       ]
       [\tsc{k}P,
       tikz={
-      \node[label=below:\tit{n/m},
+      \node[label=below:\tit{r/n/m},
       draw,circle,
       scale=0.95,
       fit to=tree]{};
@@ -239,7 +239,9 @@ When the relative pronoun is the dative, the \tsc{k}P consists of the features \
 \end{forest}
 \end{adjustbox}
 
-I discuss two relative pronouns: the animate accusative and the animate dative. These are the two forms that I compare the internal syntax of in Section \ref{sec:comparing-mg}. I show them in \ref{ex:mg-rels}.
+I discuss two relative pronouns: the animate accusative and the animate dative. These are the two forms that I compare the internal syntax of in Section \ref{sec:comparing-mg}.\footnote{
+For reasons of space, I do not discuss the animate nominative \tit{wer} `\tsc{rp}.\tsc{an}.\tsc{acc}'. I assume its analysis is identical to the one I propose for \tit{wen} and \tit{wem}, except that \tit{wer} spells out fewer case features. I work out the proposal for \tit{wen} and \tit{wem} to be able to do a comparison between Modern German and Polish in which the relative pronouns spell out exactly the same feature content.
+} I show them in \ref{ex:mg-rels}.
 
 \ex.\label{ex:mg-rels}
 \ag. we-n\\
@@ -268,8 +270,8 @@ I argue that the phi features actually correspond to gender features, number fea
 \label{tbl:mg-paradigm-wh-rels}
 \end{table}
 
-The final consonants change depending on animateness and case.\footnote{
-The vowel also differs between animateness. I return to this point when I discuss the feature content of the \tit{we}.
+The final consonants change depending on animacy and case.\footnote{
+The vowel also differs between animacy. I return to this point when I discuss the feature content of the \tit{we}.
 }
 The differing final consonant can be observed in several contexts besides relative pronouns. Table \ref{tbl:mg-dieser} gives an overview of the demonstrative \tit{dieser} `this' in Modern German in two numbers, three genders and three cases.\footnote{
 Notice that the animate forms in Table \ref{tbl:mg-paradigm-wh-rels} are the masculine forms in Table \ref{tbl:mg-dieser} and that the inanimate forms in Table \ref{tbl:mg-paradigm-wh-rels} are the neuter forms in Table \ref{tbl:mg-dieser}. This is a pattern that appears more often.
@@ -299,7 +301,7 @@ The feature \tsc{ind} corresponds to number, which is singular if it is not comb
 
 For case, I adopt the features of \citet{caha2009}, already introduced in Chapter \ref{ch:decomposition}. The feature \ac{f}1 and \tsc{f}2 corresponds to the accusative, and the features \ac{f}1, \ac{f}2 and \tsc{f}3 correspond to the dative.
 
-Having discussed the number, gender and case features, only the pronominal features remain. Another context in which the final consonants appear (besides their use as relative pronouns and demonstrative pronouns) is as pronouns on their own. In \ref{ex:mg-weak}, I give examples of the masculine accusative singular and masculine dative singular.
+Having discussed the number, gender and case features, only the pronominal features remain. Another context in which the final consonants appear (besides their use in relative pronouns and demonstrative pronouns) is as pronouns on their own. In \ref{ex:mg-weak}, I give examples of the masculine accusative singular and masculine dative singular.
 
 \ex.\label{ex:mg-weak}
 \ag. Ich wollte n gestern schon anrufen.\\
@@ -429,7 +431,7 @@ Consider Table \ref{tbl:mg-paradigm-dem} and Table \ref{tbl:mg-paradigm-wh-rels-
 \end{table}
 
 The morpheme \tit{we} combines with the same endings as the morpheme \tit{de} does in demonstrative pronouns (or relative pronouns in headed relatives).\footnote{
-Note that \tsc{wh}-relative pronouns, unlike the demonstratives, do not have feminine and plural forms, and \tsc{wh}-relative pronouns do not. As far as I know, this holds for all relative pronouns in languages of the internal-only type (cf. also for Finnish, even though it makes a lot of morphological distinctions) and of the matching type. Relative pronouns in languages of the unrestricted type do inflect for feminine and plural, as well as always-external languages.}
+Note that \tsc{wh}-pronouns, unlike the demonstratives, do not have feminine and plural forms. As far as I know, this holds for all relative pronouns in languages of the internal-only type (cf. also for Finnish, even though it makes a lot of morphological distinctions) and of the matching type. Relative pronouns in languages of the unrestricted type do inflect for feminine and plural, as well as always-external languages.}
 This identifies the \tit{de} and, more importantly for the discussion here, the \tit{we} as a separate morpheme.\footnote{
 It is also possible to analyze \tit{we} as two separate morphemes: \tit{w} and \tit{e}. This further decomposition would not make a difference for the analysis I propose here. What is crucial is that phi and case features correspond to a single morpheme and the other part has its own morpheme or morphemes.
 }\footnote{
@@ -461,7 +463,7 @@ I start with discussing the operator features \tsc{wh} and \tsc{rel}.
 \tsc{wh} is a feature that \tsc{wh}-pronouns, such as \tsc{wh}-relative pronouns and interrogatives, share. The feature triggers the construction of a set of alternatives in the sense of \citet{rooth1985,rooth1992} \citep{hachem2015}. This contrasts with the \tsc{d} in Table \ref{tbl:mg-paradigm-dem}, which is responsible for establishing a definite reference.
 The feature \tsc{rel} is present to establish a relation.
 
-I continue with the last two features that are spelled out by \tit{we}, namely the number feature \tsc{ind} and the gender feature \tsc{an}. Consider again Table \ref{tbl:mg-paradigm-wh-rels-rep}. In the different genders, not only the final consonants differ, but also the vowel. This suggests that \tit{we} also realizes gender features.\footnote{
+I continue with the last two features that are spelled out by \tit{we}, namely the number feature \tsc{ind} and the gender feature \tsc{an}. Consider again Table \ref{tbl:mg-paradigm-wh-rels-rep}. In the different genders, not only the final consonants differ, but also the vowel. This suggests that \tit{we} also realizes gender features.\footnote{\label{ex:ftn:w-er-cv}
 An alternative to this analysis is to let \tit{wer} correspond two lexical entries of which the phonological part look as in \ref{ex:wer-cv}.
 
 \ex.\label{ex:wer-cv}
@@ -474,7 +476,9 @@ A theoretical advantage of this analysis is that there is no need to specify a \
 
 An empirical advantage of this analysis concerns the vowel \tit{e}. The dative forms in all gender and numbers have the \tit{e}, which I assigned to masculine gender. This holds for the genitive forms too, which I have not given here. If \tit{we} is not specified for gender (but maybe still for number) and the vowel belongs to the final consonant, it can be inserted for non-masculines too.
 
-Notice also that the feminine singular and the plurals do not have a weak pronoun and they do not have a marker in forms like \tit{diese} `this' (see Table \ref{tbl:mg-dieser}). This could be because their lexical entries also contain only a slot for a consonant, and their phonogy only consists of vowels, so the content of the lexical entry only appears when it is combined with a morpheme that introduces a slot for a vowel.
+The strong masculine singular pronoun in nominative in Modern German is \tit{er}. It seems it can be spelled out by the lexical entry in \ref{ex:er-c} and another lexical entry that just introduces a slot for a vowel. This is not the case for the same pronoun in accusative and dative case: then the additional lexical entry seems to be a slot for a vowel that has already been filled with in /i/ (for \tit{ihn} and \tit{ihm}). For the nominative and accusative neuter singular pronoun, the slot is filled with an /ɛ/ (for \tit{es}). I leave it for future research to investigate how this difference should be modeled. An observation that might be relevant in doing that is that in the paradigm of the possessives (\tit{mein}) there are three cells that do not take an ending: the masculine singular nominative and the neuter singular nominative and accusative.
+
+Notice also that the feminine singular and the plurals do not have a weak pronoun and they do not have a marker in forms like \tit{diese} `this' (see Table \ref{tbl:mg-dieser}). This could be because their lexical entries also contain only a slot for a consonant, and their phonology only consists of vowels, so the content of the lexical entry only appears when it is combined with a morpheme that introduces a slot for a vowel.
 
 As this matter is not relevant for the core of my analysis, I put it aside for now. For ease of exposition I simply assign a phonological exponent to each lexical entry and I do not make further distinctions in C and V slots.
 }
@@ -507,7 +511,7 @@ In sum, the morpheme \tit{we} corresponds to the features \tsc{wh}, \tsc{rel}, \
   {\draw (.east) node[right]{⇔ \tit{we}}; }
 \end{forest}\label{ex:mg-entry-we}
 
-At this point, I gave lexical entries for each of the morphemes that the relative pronoun consists of (in \ref{ex:mg-entry-n}, \ref{ex:mg-entry-m} and \ref{ex:mg-entry-we}), and I showed what the relative pronouns as a whole look like. I repeat them from \ref{ex:mg-rp} in \ref{ex:mg-rp-rep}.
+At this point, I gave lexical entries for each of the morphemes that the relative pronoun consists of (in \ref{ex:mg-entry-n}, \ref{ex:mg-entry-m} and \ref{ex:mg-entry-we}), and I showed what the relative pronoun as a whole looks like. I repeat it from \ref{ex:mg-rp} in \ref{ex:mg-rp-rep}.
 
 \ex.\label{ex:mg-rp-rep}
 \begin{adjustbox}{max width=0.9\textwidth}
@@ -531,7 +535,7 @@ At this point, I gave lexical entries for each of the morphemes that the relativ
       ]
       [\tsc{k}P,
       tikz={
-      \node[label=below:\tit{n/m},
+      \node[label=below:\tit{r/n/m},
       draw,circle,
       scale=0.95,
       fit to=tree]{};
@@ -558,7 +562,7 @@ Ideally, the theory that derives this is not language-specific, but the same for
 
 \section{Combining morphemes in Nanosyntax}\label{sec:combining}
 
-The way Nanosyntax combines different morphemes is not by glueing them together directly from the lexicon. Instead, features are merged one by one using two components that drive the derivation. These two components are (1) a functional sequence, in which the features that need to merged are specified including the order they are merged in, and (2) the Spellout Algorithm, which describes the spellout procedure. The lexical entries that are available within a language interact with the derivation in such a way that the morphemes get combined in the right way. Note that the functional sequence and the Spellout Algorithm are stable across languages. The only difference between languages lies in their lexical entries.
+The way Nanosyntax combines different morphemes is not by glueing them together directly from the lexicon. Instead, features are merged one by one using two components that drive the derivation. These two components are (1) a functional sequence, in which the features that need to be merged are specified including the order they are merged in, and (2) the Spellout Algorithm, which describes the spellout procedure. The lexical entries that are available within a language interact with the derivation in such a way that the morphemes get combined in the right way. Note that the functional sequence and the Spellout Algorithm are stable across languages. The only difference between languages lies in their lexical entries.
 
 \ref{ex:fseq-wh-rel} shows the functional sequence for relative pronouns. It gives all features it contains and their hierarchical ordering.
 
@@ -603,7 +607,7 @@ The linear order in \ref{ex:of-the-kids} reflects the hierarchical ordering of \
 Notice also that the plural morpheme \tit{-ren} appears more to the right, hence lower in the structure, than the operator features.
 Finally, I assume that the feature \tsc{rel} is hierarchy higher than \tsc{wh}.
 
-Before I derive construct the relative pronouns, I explain how the spellout procedure in Nanosyntax works. Features (Fs) are merged one by one according to the functional sequence, starting from the bottom. After each instance of merge, the constructed phrase must be spelled out, as stated in \ref{ex:cyclic-phrasal-spellout}.
+Before I construct the relative pronouns, I explain how the spellout procedure in Nanosyntax works. Features (Fs) are merged one by one according to the functional sequence, starting from the bottom. After each instance of merge, the constructed phrase must be spelled out, as stated in \ref{ex:cyclic-phrasal-spellout}.
 
 \ex. \tbf{Cyclic phrasal spellout} \citep{caha2020a}\\
 Spellout must successfuly apply to the output of every Merge F operation. After successful spellout, the derivation may terminate, or proceed to another round of Merge F.\label{ex:cyclic-phrasal-spellout}
@@ -619,8 +623,8 @@ A Spellout Algorithm specifies which movement operations apply and in which orde
  \b. If (a) fails, move the Spec of the complement and spell out.\label{ex:spellout-algorithm-spec}
  \b. If (b) fails, move the complement of F and spell out.\label{ex:spellout-algorithm-comp}
 
-I informally reformulate what is in \ref{ex:spellout-algorithm}, starting with the first line in \ref{ex:spellout-algorithm-phrasal}. This says that a feature F is merged, and the newly created phrase FP is attempted to spell out.
-The next two lines, \ref{ex:spellout-algorithm-spec} and \ref{ex:spellout-algorithm-comp}, describe the two types of rescue movements that take place when the spellout in \ref{ex:spellout-algorithm-phrasal} fails (i.e. when there is no match in the lexicon).
+I informally reformulate what is in \ref{ex:spellout-algorithm}, starting with the first line in \ref{ex:spellout-algorithm-phrasal}. This says that a feature F is merged, and we try to spell out the newly created phrase FP.
+When the spellout in \ref{ex:spellout-algorithm-phrasal} fails (i.e. when there is no match in the lexicon), we continue to the next two lines, \ref{ex:spellout-algorithm-spec} and \ref{ex:spellout-algorithm-comp}, which describe the two types of rescue movements that can take place then.
 In the discussion about Modern German, only the first line leads to successful spellout. In the next chapter in which I discuss Polish derivations, the second and third line also lead to successful spellouts. I give the full algorithm here to give the complete picture from the start.
 
 If these two movement operations still do not lead to a successful spellout, there are two more derivational options possible: Backtracking and Spec Formation. I return to these options later in this section, when they are relevant in the derivation of Modern German relative pronouns.
@@ -795,7 +799,13 @@ If Merge F has failed to spell out (even after Backtracking), try to spawn a new
 
 I reformulate this informally: if none of the preceding spellout options lead to a successful spellout, a last resort operation applies. The feature that has not been spelled out yet, is merged with some other features (to which I shortly come back) in a separate workspace. Crucially, the phrase that is created is contained in a lexical tree in the language's lexicon. Finally, the feature is spelled out successfully. The newly created phrase (the spec) is merged as a whole with the already existing structure.
 
-Now I come back to the `other' features that the feature is merged with to create a phrase that can be spelled out. This cannot be just any feature. What is crucial here again is the functional sequence. The newly merged feature is merged with features that precede it in this sequence. This can be a single feature or multiples ones. I illustrate this with the Modern German relative pronouns.
+Now I come back to the `other' features that the feature is merged with to create a phrase that can be spelled out. This cannot be just any feature. What is crucial here again is the functional sequence. The newly merged feature is merged with features that precede it in this sequence.\footnote{
+There are three different proposals on Spec Formation.
+\citet{caha2019} argue that there can only be a single feature overlap between the two phrases.
+\citet{de2018} argue that there cannot be any overlap at all. The features that used in the second workspace are removed from the structure in the main workspace.
+In this dissertation, I work with the proposal in \citet{starke2018}, in which the the overlap between the phrase on the left and the phrase on the right can also be more than a single feature. This is the only proposal of the three that allows me to derive all the forms I encounter.
+}
+This can be a single feature or multiples ones. I illustrate this with the Modern German relative pronouns.
 
 For the feature \tsc{wh} it means that it is merged with the feature \tsc{ind}. Then, the lexicon is checked for a lexical tree that contains the phrase \tsc{wh}P that contains \tsc{wh} and \tsc{ind}, as shown in \ref{ex:mg-spellout-wh-ind}.
 
@@ -879,12 +889,7 @@ The newly created phrase is merged as a whole with the already existing structur
 \end{forest}
 \end{adjustbox}
 
-Notice here that there is an overlap of multiple features between the phrase on the right and the phrase on the left.\footnote{
-There are three different proposals on Spec Formation.
-\citet{caha2019} argue that there can only be a single feature overlap between the two phrases.
-\citet{de2018} argue that there cannot be any overlap at all. The features that used in the second workspace are removed from the structure in the main workspace.
-In this dissertation, I work with the proposal in \citet{starke2018}, in which the the overlap between the phrase on the left and the phrase on the right can also be more than a single feature. This is the only proposal of the three that allows me to derive all the forms I encounter.
-}
+Notice here that there is an overlap of multiple features between the phrase on the right and the phrase on the left.
 
 The next feature in the functional sequence is the feature \tsc{rel}. As always, it is merged to the existing syntactic structure, which is now the \tsc{wh}P. The result is the \tsc{rel}P shown in \ref{ex:mg-spellout-rel-phrasal}.
 
@@ -1195,7 +1200,7 @@ I have suggested that headless relatives are derived from light-headed relatives
 \begin{forest} boom
   [\tsc{k}P,
   tikz={
-  \node[label=below:\tit{n/m},
+  \node[label=below:\tit{r/n/m},
   draw,circle,
   scale=0.75,
   fit to=tree]{};
@@ -1215,7 +1220,7 @@ I end up claiming that the phi and case feature portmanteau of the relative pron
 \begin{forest} boom
     [\tsc{k}P,
     tikz={
-    \node[label=below:\tit{n/m},
+    \node[label=below:\tit{r/n/m},
     draw,circle,
     scale=0.95,
     fit to=tree]{};
@@ -1235,10 +1240,10 @@ I end up claiming that the phi and case feature portmanteau of the relative pron
 \end{forest}
 
 Before I dive into the feature content of the light head, I first need to identify it, as it does not surface in headless relatives.
-I consider two kinds of light-headed relatives as the source of the headless relative.
-First, the deletion of the light head is optional, and the headless relative is derived from an existing light-headed relative.
-Second, the deletion of the light head is obligatory, and the headless relative is derived from a light-headed relative that does not surfaces in Modern German.
-I consider the first option first, and I give two arguments against it.
+I consider two kinds of light-headed relatives as the potential source of the headless relative.
+The first possible scenario is that the headless relative is derived from an existing light-headed relative, in which case the deletion of the light head would have to be optional.
+The second possible scenario is that the headless relative is derived from a light-headed relative that does not surfaces in Modern German, in which case the deletion of the light head would have to be obligatory.
+I consider the first scenario first, and I give two arguments against it.
 Then, to identify the exact input structure, I take the light head from the existing light-headed relative as a point of departure, and I modify it in such a way that it is appropriate as a light head for a headless relative.
 
 I give an example of a Modern German light-headed relative in \ref{ex:mg-den-wen}.\footnote{
@@ -1272,7 +1277,7 @@ For easy reference, I call this headless relative the \tit{wen} relative.
 Jan hugs \tsc{rp}.\tsc{an}.\tsc{acc} he likes\\
 `Jan hugs who he likes.'\label{ex:mg-wen}
 
-I give two arguments against this hypothesis. First, in headless relatives the morpheme \tit{auch immer} `ever' can appear, as shown in \ref{ex:mg-wh-for-headless-ever}.
+I give two arguments against this hypothesis. First, in headless relatives the phrase \tit{auch immer} `ever' can appear, as shown in \ref{ex:mg-wh-for-headless-ever}.
 
 \exg. Jan unarmt \tbf{wen} {\tbf{auch} \tbf{immer}} \tbf{er} \tbf{mag}.\\
 Jan hugs \tsc{rp}.\tsc{an}.\tsc{acc} ever he likes\\
@@ -1340,11 +1345,11 @@ In sum, there are two arguments against the \tit{den}-\tit{wen} relative being t
 
 The light head in the \tit{den}-\tit{wen} relative is a demonstrative. A demonstrative refers back to a linguistic or extra-linguistic antecedent. Consider the context in \ref{ex:mg-context-def} again. The demonstrative \tit{den} in the \tit{den}-\tit{wen} relative refers back to the friend of Jan that he likes, and the construction is grammatical. Now consider the context in \ref{ex:mg-context-univ} again. In this case, there is no antecedent for the demonstrative \tit{den} to refer back to, and the structure is infelicitous.
 
-I zoom in on the internal syntax of the demonstrative \tit{den} to investigate what it is about the demonstrative that forces the definite-like interpretation. The demonstrative consists (at least) of the two morphemes \tit{de} and \tit{n}. One of these morphemes are identical to the \tsc{wh}-relative pronoun: the \tit{n}, which spells out pronominal, number, gender and case features. The other morpheme differs: the \tit{de}, which establishes a definite reference.
+I decompose demonstrative \tit{den} into different morphemes to investigate what it is about the demonstrative that forces the definite-like interpretation. The demonstrative consists (at least) of the two morphemes \tit{de} and \tit{n}. One of these morphemes is identical to the \tsc{wh}-relative pronoun: the \tit{n}, which spells out pronominal, number, gender and case features. The other morpheme differs: the \tit{de}, which establishes a definite reference.
 
 So far, I established that the \tit{den}-\tit{wen} relative cannot be the source from which the headless relative is derived. Still, there must be some light-headed relative that is the source. I propose that the light head in the light-headed relative is even lighter than the head in the \tit{den}-\tit{wen} relative: it is an extra light head.
 
-I propose that the extra light head is the element that is left once the morphemes \tit{de} is absent. This is the morpheme that is the final consonant of the relative pronoun. I give the extra light-headed relative that the \tit{wen}-relative is derived from in \ref{ex:mg-real-base}. The brackets around the light head indicate that it is obligatorily deleted.\footnote{
+I propose that the extra light head is the element that is left once the morpheme \tit{de} is absent. This is the morpheme that is the final consonant of the relative pronoun. I give the extra light-headed relative that the \tit{wen}-relative is derived from in \ref{ex:mg-real-base}. The brackets around the light head indicate that it is obligatorily deleted.\footnote{\label{ftn:florian}
 The light head and the extra light head I discuss resemble the strong and weak definite in \citet{schwarz2009}, at least morphologically (although my light head is always obligatorily deleted). \posscitet{schwarz2009} strong definite is anaphoric in nature, and the weak definite encodes uniqueness. I give an example of a strong definite in \ref{ex:mg-florian-strong}. The strong definite is \tit{dem} that precedes \tit{Freund} `friend'. It refers back to the linguistic antecedent \tit{einen Freund} `a friend'.
 
 \exg. Hans hat heute einen Freund zum Essen mit nach Hause gebracht. Er hat uns vorher ein Foto von dem Freund gezeigt.\\
@@ -1368,6 +1373,26 @@ I do not see right away how the extra light head in headless relatives could enc
 \exg. Jan umarmt [n] \tbf{wen} \tbf{er} \tbf{mag}.\\
 Jan hugs \tsc{elh}.\tsc{an}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} he likes\\
 `Jan hugs who he likes.'\label{ex:mg-real-base}
+
+A question that remains open is why the extra light head in \ref{ex:mg-real-base} cannot surface and needs to be deleted. I assume this is because of two independent restrictions. The first one is that headless relatives are always restrictive relative clauses and cannot be used non-restrictively (cf. \pgcitep{emonds1979}{232}, \pgcitep{kayne1994}{114}).
+
+The second restriction is that restrictive relative clauses cannot surface with a head that is not definite.
+Consider the sentence in \ref{ex:mg-florian-fritz-m}.
+
+\exg. *Fritz ist jetzt im Haus, das er sich letztes Jahr gebaut hat.\\
+ Fritz is now {in the} house that the \tsc{refl} last year built has\\
+ `Fritz is now in the house that he built last year.' \flushfill{Modern German, \pgcitealt{schwarz2009}{22} after \pgcitealt{hartmann1978}{77}}\label{ex:mg-florian-fritz-m}
+
+The head of the relative clause is \tit{m Haus}, and the sentence is ungrammatical.
+Now consider the sentence in \ref{ex:mg-florian-fritz-dem}.
+
+\exg. Fritz ist jetzt in dem Haus, das er sich letztes Jahr gebaut hat.\\
+ Fritz is now in the house that the \tsc{refl} last year built has\\
+ `Fritz is now in the house that he built last year.' \flushfill{Modern German, \pgcitealt{schwarz2009}{22} after \pgcitealt{hartmann1978}{77}}\label{ex:mg-florian-fritz-dem}
+
+Here the head of the relative clause is \tit{dem Haus} and the sentence has become grammatical.
+There seems to be a parallel between the examples in \ref{ex:mg-florian-fritz-m} and \ref{ex:mg-florian-fritz-dem} and the extra light head (see also footnote \ref{ftn:florian}). The morpheme \tit{m} in \tit{m Haus} could be the same \tit{m} as the extra light head, only lacking the overt noun.
+Just as \tit{m Haus}, \tit{m} cannot surface as the head of the relative clause. However, unlike \tit{m Haus}, \tit{m} is deleted.
 
 In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-mg}. They are the accusative animate and the dative animate, shown in \ref{ex:mg-lhs}.
 
@@ -1447,7 +1472,7 @@ I introduced the lexical entries that are required to spell out these features i
 
 The derivations of the extra light heads are straight-forward ones. The features are merged one by one, and after each new phrase is created, it is spelled out as a whole. I still go through them step by step.
 
-First, the features \tsc{ref} and \tsc{cl} is merged, and the \tsc{cl}P is created.
+First, the features \tsc{ref} and \tsc{cl} are merged, and the \tsc{cl}P is created.
 The syntactic structure forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep1}.
 Therefore, the \tsc{cl}P is spelled out as \tit{n}.
 Exactly the same happens for the features \tsc{an}, \tsc{ind} and \tsc{f}1.
@@ -1623,6 +1648,8 @@ The extra light head consists of a single morpheme: the \tsc{acc}P.
 This \tsc{acc}P is structurally contained in the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
 The surface pronoun is the relative pronoun that bears the internal case: \tit{wen}.
 
+For reasons of space I do not show the comparisons of the other matching situations. These are situations in which both the internal and external case are nominative or both the internal and external case are dative. The same logic as I showed in Figure \ref{fig:mg-int=ext} works for these situations too.
+
 I continue with the situation in which the internal case is the more complex one.
 Consider the example in \ref{ex:mg-acc-dat-rep}, in which the internal dative case competes against the external accusative case. The relative clause is marked in bold.
 The internal case is dative, as the predicate \tit{vertrauen} `to trust' takes dative objects. The relative pronoun \tit{wem} `\ac{rel}.\ac{an}.\ac{dat}' appears in the dative case. This is the element that surfaces.
@@ -1716,6 +1743,8 @@ I draw a dashed circle around the biggest possible element that is structurally 
 The extra light head consists of a single morpheme: the \tsc{acc}P.
 This \tsc{acc}P is structurally contained in the relative pronoun. Therefore, the extra light can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
 The surface pronoun is the relative pronoun that bears the internal case: \tit{wem}.
+
+For reasons of space I do not show the comparisons of the other situations in which the internal case is more complex. These are situations in which the internal case is dative and the external case is nominative and in which the internal case is accusative and the external case is nominative. The same logic as I showed in Figure \ref{fig:mg-int-wins} works for these situations too.
 
 I end with the situation in which the external case is the more complex one.
 Consider the examples in \ref{ex:mg-dat-acc-rep}, in which the internal accusative case competes against the external dative case. The relative clauses are marked in bold. It is not possible to make a grammatical headless relative in this situation.
@@ -1818,8 +1847,23 @@ The relative pronoun only contains the \tsc{acc}P, and it lacks the \tsc{f}3 tha
 
 The relative pronoun is not structurally contained in the light head. It namely lacks the complete constituent and \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
-As a result, there is no grammatical headless relative possible.\footnote{
-The only exception is when there is a syncretism.
+As a result, there is no grammatical headless relative possible.
+
+For reasons of space I do not show the comparisons of the other situations in which the external case is more complex. These are situations in which the internal case is nominative and the external case is accusative and in which the internal case is nominative and the external case is dative. The same logic as I showed in Figure \ref{fig:mg-ext-wins} works for these situations too.\footnote{
+This is true for the headless relatives with animates that I gave examples of in Chapter \ref{ch:typology}. It does not hold for headless relatives with inanimates, which I already briefly mentioned in Chapter \ref{ch:the-basic-idea}. I repeat the relevant example in \ref{ex:mg-nom-acc-syn}, including the extra light head which I assume to be there.
+
+\exg. Ich erzähle [s] \tbf{was} \tbf{immer} \tbf{mir} \tbf{gefällt}.\\
+ 1\ac{sg}.\ac{nom} tell.\ac{pres}.1\ac{sg}\scsub{[acc]} \tsc{elh}.\ac{inan}.\tsc{acc} \tsc{rp}.\ac{inan}.\tsc{nom} ever 1\tsc{sg}.\tsc{dat} pleases.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
+ `I tell whatever pleases me.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-nom-acc-syn}
+
+In \ref{ex:mg-nom-acc-syn}, the internal nominative case competes against the external accusative case. The relative clause is marked in bold.
+The internal case is nominative, as the predicate \tit{gefallen} `to please' takes nominative objects. The relative pronoun \tit{was} `\ac{rel}.\ac{inan}.\ac{nom}' appears in the nominative case. This is the element that surfaces
+The external case is accusative, as the predicate \tit{erzählen} `to tell' takes accusative objects. The extra light head \tit{s} `\ac{elh}.\ac{inan}.\ac{acc}' appears in the accusative case. It is placed between square brackets because it does not surface.
+For inanimates, there is a syncretism between nominative and accusative. In these cases, the extra light head can be deleted via formal containment. In what follows, I briefly describe the comparison.
+
+The inanimate accusative extra light head consists of a single morpheme (\tit{s}). The inanimate nominative relative pronoun consists of two morphemes (\tit{wa} and \tit{s}) (see footnote \ref{ex:ftn:w-er-cv}).
+The extra light head (the \tsc{acc}P realized by \tit{s}) is formally contained in the relative pronoun (the \tsc{rel}P realized by \tit{wa-s}).
+Therefore, the extra light head can be deleted, and the surface pronoun is the relative pronoun that bears the external case: \tit{was}.
 }
 
 \section{Summary}
@@ -1837,7 +1881,7 @@ I derive this from the internal syntax of light heads and relative pronouns in M
       \begin{forest} boom
         [\tsc{k}P,
         tikz={
-        \node[label=below:\tit{n/m},
+        \node[label=below:\tit{r/n/m},
         draw,circle,
         scale=0.75,
         fit to=tree]{};
@@ -1862,7 +1906,7 @@ I derive this from the internal syntax of light heads and relative pronouns in M
             ]
             [\tsc{k}P,
             tikz={
-            \node[label=below:\tit{n/m},
+            \node[label=below:\tit{r/n/m},
             draw,circle,
             scale=0.75,
             fit to=tree]{};
