--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -642,10 +642,10 @@ Consider the forms after this second phonological change and the surface forms i
 
 \begin{table}[htbp]
   \center
-  \caption{Polish inanimate relative pronouns (after change 1 + surface forms) \pgcitep{swan2002}{160}}
+  \caption{Polish inanimate relative pronouns (after change 2 + surface forms) \pgcitep{swan2002}{160}}
   \begin{tabular}[b]{ccc}
     \toprule
-              & after change 1  & surface    \\
+              & after change 2  & surface    \\
     \cmidrule{2-3}
     \tsc{nom} & c-i-o           &  c-o      \\
     \tsc{acc} & c-i-o           &  c-o      \\
@@ -664,11 +664,11 @@ The last phonological change is the combination of \tit{c}, \tit{i} and \tit{o} 
 
 Note, however, that the \tit{co} in the nominative and the accusative does not become \tit{cze}. I assume that the \tit{o} in the nominative and accusative resists the process in \ref{ex:pol-phon-c+o}. This is because the \tit{o} in the nominative and accusative is a `different' \tit{o} than the \tit{o} in the genitive and dative. This \tit{o} spells out different features than the \tit{o}, such as nominative and accusative case, which in the case of the genitive and dative are realized by \tit{go} and \tit{mu}.
 
-I am not aware of an example that independently shows this change as a whole. However, there are examples that show the change step by step. That is, I have an example in which the combination of \tit{i} and \tit{o} becomes \tit{e}, and I have an example in which \tit{c} and \tit{e} become \tit{cze}. I give them in
+I am not aware of an example that independently shows this change as a whole. However, there are examples that show the change step by step. That is, I have an example in which the combination of \tit{i} and \tit{o} becomes \tit{e}, and I have an example in which \tit{c} and \tit{e} become \tit{cze}. I give them in \ref{ex:pol-phon-c+o-steps}.
 
 \ex.\label{ex:pol-phon-c+o-steps}
 \a. /i/ + /o/ → /e/
-\a. /c/ + /e/ → /cze/
+\b. /c/ + /e/ → /cze/
 
 Consider the paradigm for the singular of \tit{biurko} `desk' and the singular of \tit{słońce} `sun' in Table \ref{tbl:pol-io-to-e}.
 
@@ -699,7 +699,7 @@ I give the example in which the combination of \tit{c} and \tit{e} results in \t
 
 The noun \tit{ojc} `father' combines with the vocative marker \tit{e}. The sequence \tit{c-e} changes to \tit{cze}.
 
-The conclusion I draw from this rather long reasoning is that the morpheme \tit{o} is not specific to animate relative pronouns, but it also appears elsewhere, for instance in inanimate relative pronouns, demonstratives and in the \tit{ni}- and \tit{je}-pronouns, as shown in Table \ref{tbl:pol-o-everywhere}.
+The conclusion I draw from this rather long reasoning is that the morpheme \tit{o} in \tit{kogo} and \tit{komu} is not specific to animate relative pronouns, but it also appears elsewhere, for instance in inanimate relative pronouns, demonstratives and in the \tit{ni}- and \tit{je}-pronouns, as shown in Table \ref{tbl:pol-o-everywhere}.
 
 \begin{table}[htbp]
   \center
@@ -1202,8 +1202,10 @@ As I suggested in Chapter \ref{ch:deriving-onlyinternal} for Modern German, I en
 \end{forest}
 \end{adjustbox}
 
-For Modern German, I considered two kinds of headless relatives as the source of the headless relative.
-First, the headless relative is derived from an existing light-headed relative, and the deletion of the light head is optional. Second, the headless relative is derived from a light-headed relative that does not surface in Polish, and the deletion of the light head is obligatory.
+For Modern German, I considered two kinds of headless relatives as the potential source of the headless relative.
+The first possible scenario is that the headless relative is derived from an existing light-headed relative, in which case the deletion of the light head would have to be optional.
+The second possible scenario is that the headless relative is derived from a light-headed relative that does not surfaces in Modern German, in which case the deletion of the light head would have to be obligatory.
+I consider the first scenario first, and I give two arguments against it.
 For Modern German I concluded it was the second, and I determined which features this extra light head should consist of. I do the same investigation for Polish, and I reach the same conclusion as I did for Modern German.
 
 Consider the existing Polish light-headed relative in \ref{ex:pol-light-headed}.
@@ -1248,7 +1250,7 @@ The second argument against the existing light-headed relatives being the source
 just as in Modern German, Polish headless relatives can be analyzed as either universal or definite \pgcitep{citko2004}{103}.
 Light-headed relatives, such as the one in \ref{ex:pol-light-headed}, only have the definite interpretation.
 
-In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-polish}. The are the accusative animate and the dative animate, shown in \ref{ex:pol-elhs}.
+In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-polish}. These are the accusative animate and the dative animate, shown in \ref{ex:pol-elhs}.
 % \footnote{
 % It is also possible that the strong pronoun is syncretic with the extra light head and that the extra light head is actually also spelled out as \tit{jego}/\tit{jemu}. This would mean that the strong extra light head consists of even more than two morphemes. For my proposal, it is important to show that the extra light head consists of at least two morphemes, one of which spells out case features. It works equally well when the non-case part of the structure actually consists of more one morpheme. I continue working out a proposal in which the extra light head is bimorphemic.
 % }
@@ -1729,7 +1731,7 @@ The external case is dative, as the predicate \tit{ufać} `to trust' takes dativ
 \ag. *Jan ufa [omu] \tbf{kogo} \tbf{-kolkwiek} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
 Jan trust.\tsc{3sg}\scsub{[dat]} \tsc{elh}.\tsc{dat}.\tsc{an} \tsc{rp}.\tsc{acc}.\tsc{an} ever let.\tsc{3sg}\scsub{[acc]} to home\\
 `Jan trusts whoever he let into the house.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-dat-acc-rel}
-\bg. Jan ufa omu [\tbf{kogo}] \tbf{-kolkwiek} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
+\bg. *Jan ufa omu [\tbf{kogo}] \tbf{-kolkwiek} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
 Jan trust.\tsc{3sg}\scsub{[dat]} \tsc{elh}.\tsc{dat}.\tsc{an} \tsc{rp}.\tsc{acc}.\tsc{an} ever let.\tsc{3sg}\scsub{[acc]} to home\\
 `Jan trusts whoever he let into the house.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-dat-acc-lh}
 
@@ -1846,6 +1848,10 @@ The relative pronoun only contains the \tsc{acc}P, and it lacks the \tsc{f}3 tha
 The relative pronoun is not a constituent that is structurally contained in the light head. It namely lacks the complete constituent \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
 As a result, there is no grammatical headless relative possible.
+
+\section{Reflecting on crosslinguistic differences}
+
+
 
 \section{Summary}
 
