--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -461,7 +461,10 @@ I show the complete structure that I work towards in this section in \ref{ex:ohg
 \end{forest}
 \end{adjustbox}
 
-I discuss two relative pronouns: the masculine singular nominative and the masculine singular accusative. These are the two forms that I compare the internal syntax of in Section \ref{sec:comparing-ohg}. I show them in \ref{ex:ohg-rels}.
+I discuss two relative pronouns: the masculine singular nominative and the masculine singular accusative. These are the two forms that I compare the internal syntax of in Section \ref{sec:comparing-ohg}.\footnote{
+For reasons of space, I do not discuss the animate nominative \tit{dëmu/dëmo} `\tsc{rp}.\tsc{m}.\tsc{sg}.\tsc{dat}'. I assume its analysis is identical to the one I propose for \tit{dër} and \tit{dën}, except that \tit{dëmu/dëmo} spells out more case features. I work out the proposal for \tit{dër} and \tit{dën}, because I have not found an example in which the internal dative case wins over the external accusative case.
+}
+I show them in \ref{ex:ohg-rels}.
 
 \ex.\label{ex:ohg-rels}
 \ag. d-ër\\
@@ -851,9 +854,9 @@ To summarize, I decomposed the relative pronoun into the two morphemes: \tit{d} 
 
 I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is contained in the other one. In Chapter \ref{ch:the-basic-idea} and in the introduction of this chapter, I suggested that Old High German has two possible light heads. Therefore I will also suggest that there are two different light-headed relatives that can be the source of the headless relative.
 
-For Modern German and Polish, I considered two kinds of light-headed relatives as the potential source.
-The first possible scenario is that the deletion is optional and that the headless relative is derived from an existing light headed relative.
-The second possible scenario is that the deletion of the light head is obligatory and that the headless relative is derived from a light-headed relative that does not surface.
+For Modern German and Polish, I considered two kinds of light-headed relatives as the potential source of the headless relative.
+The first possible scenario is that the headless relative is derived from an existing light-headed relative, in which case the deletion of the light head would have to be optional.
+The second possible scenario is that the headless relative is derived from a light-headed relative that does not surfaces in Modern German, in which case the deletion of the light head would have to be obligatory.
 I concluded for Modern German and Polish that the second scenario is the one that is attested in the languages.
 For Old High German I assume that headless relatives can be derived from both light-headed relatives.
 
@@ -1565,8 +1568,8 @@ In Figure \ref{fig:ohg-int=ext-lh}, I give the syntactic structure of the light 
   \label{fig:ohg-int=ext-lh}
 \end{figure}
 
-The light head also consists of two morphemes: \tit{dh} and \tit{er}.
-The relative pronoun consists of two morphemes: \tit{dh} and \tit{er}.
+The light head consists of two morphemes: \tit{dh} and \tit{er}.
+The relative pronoun also consists of two morphemes: \tit{dh} and \tit{er}.
 Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dotted circle around the biggest possible element that formally contained in both the light head and the relative pronoun.
 
@@ -1768,8 +1771,8 @@ In Figure \ref{fig:ohg-ext-wins-lh}, I give the syntactic structure of the light
   \label{fig:ohg-ext-wins-lh}
 \end{figure}
 
-The light head also consists of two morphemes: \tit{dh} and \tit{en}.
-The relative pronoun consists of two morphemes: \tit{dh} and \tit{er}.
+The light head consists of two morphemes: \tit{dh} and \tit{en}.
+The relative pronoun also consists of two morphemes: \tit{dh} and \tit{er}.
 Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dotted circle around the biggest possible element that is formally contained in both the light head and the relative pronoun.
 
@@ -2238,8 +2241,8 @@ In Figure \ref{fig:ohg-int-wins-lh}, I give the syntactic structure of the light
   \label{fig:ohg-int-wins-lh}
 \end{figure}
 
-The light head also consists of two morphemes: \tit{th} and \tit{er}.
-The relative pronoun consists of two morphemes: \tit{th} and \tit{en}.
+The light head consists of two morphemes: \tit{th} and \tit{er}.
+The relative pronoun also consists of two morphemes: \tit{th} and \tit{en}.
 Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dotted circle around the biggest possible element that formally contained in both the light head and the relative pronoun.
 
@@ -2635,6 +2638,9 @@ The second question that remains is what triggers the movement of the external h
 }
 
 Finally, notice that the larger syntactic structures I proposed for Old High German in this section also hold for Modern German and Polish. In these languages, grammatical headless relatives are only derived from light-headed relatives headed by extra light heads. These extra light heads are indefinite and low in the structure (see \ref{ex:ohg-syntax-elh} and \ref{ex:cinque-low-ext}). From this position, the relative pronoun always c-commands these extra light heads, and the extra light heads can be deleted when they are structurally contained in the relative pronouns.
+
+\section{Reflecting on crosslinguistic differences}
+
 
 \section{Summary}
 
