--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -1,5 +1,11 @@
 %%%abbreviations%%%
 
+\DeclareAcronym{refl}{
+  short = \tsc{refl} ,
+  long  = reflexive ,
+  tag = abbr
+}
+
 \DeclareAcronym{elh}{
   short = \tsc{elh} ,
   long  = extra light head ,
