--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -881,3 +881,20 @@
   year={1994},
   publisher={MIT press}
 }
+
+@article{hartmann1978,
+  title={Verschmelzungen als Varianten des bestimmten Artikels},
+  author={Hartmann, Dietrich},
+  journal={Sprache in Gegenwart und Geschichte. Festschrift F{\"u}r Heinrich Matthias Heinrichs., B{\"o}hlau, K{\"o}ln},
+  pages={68--81},
+  year={1978}
+}
+
+@article{emonds1979,
+  title={Appositive relatives have no properties},
+  author={Emonds, Joseph},
+  journal={Linguistic Inquiry},
+  pages={211--243},
+  year={1979},
+  publisher={JSTOR}
+}
